--- a/popup/popup.html
+++ b/popup/popup.html
@@ -7,7 +7,7 @@
 </head>
 <body>
 <div id="fetch-action">
-    <img src="icons/i256b.png">
+    <img src="../icons/i256b.png">
 </div>
 
 <div id="result">:3</div>
