Reupload (manual rebuild) >>implement status display in popup

--- a/popup/popup.html
+++ b/popup/popup.html
@@ -10,6 +10,20 @@
     <img src="../icons/i256b.png">
 </div>
 
+<div id="info">
+    <div>
+        <span>Status:</span>
+        <span id="status">not ready</span>
+    </div>
+    <div>
+        <span>Previous check-in:</span>
+        <span id="prev-check-in">never</span>
+    </div>
+    <div>
+        <span>Next scheduled check-in:</span>
+        <span id="next-check-in">not scheduled</span>
+    </div>
+</div>
 <div id="result">:3</div>
 </body>
 </html>
