--- a/popup/popup.html
+++ b/popup/popup.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
+    <script src="/node_modules/webextension-polyfill/dist/browser-polyfill.min.js"></script>
     <script src="popup.js" defer></script>
     <link rel="stylesheet" href="popup.css">
 </head>
