Reupload (manual rebuild) >>implement download debug logs as json

--- a/popup/popup.html
+++ b/popup/popup.html
@@ -21,6 +21,11 @@
     </div>
 </div>
 
-<div id="result">:3</div>
+<div id="result"></div>
+<div id="beta">
+    <h1>Beta Tools</h1>
+    <div id="beta-report">Generate log</div>
+    <a href="#todo">Report bug</a>
+</div>
 </body>
 </html>
